--- a/text/sec0_abstract.tex
+++ b/text/sec0_abstract.tex
@@ -1,12 +1,16 @@
-\begin{frame}\frametitle{私が選んだ理由}
+\begin{frame}\frametitle{紹介論文}
+Su et al, ``A video forgery detection algorithm based on compressive sensing,'' Multimedia Tools and Applications, vol. 74, no. 17, pp. 6641–6656, September 2015 \cite{Su2015}
+
+\begin{block}{su}
 \begin{itemize}
-    \item 教師なしっぽい
+    \item 教師なし
     \item 簡単そうで結果が良かった
 \end{itemize}
+\end{block}
 
 他の候補
 \begin{itemize}
-    \item Perceptual ~
+    \item Perceptual
     \item Chen
     \item etc
 \end{itemize}
