--- a/ref.bib
+++ b/ref.bib
@@ -2,7 +2,6 @@
 author = {Su, Lichao and Huang, Tianqiang and Yang, Jianmei},
 doi = {10.1007/s11042-014-1915-4},
 file = {:C$\backslash$:/Users/karita/Documents/Mendeley Desktop/Su, Huang, Yang - 2014 - A video forgery detection algorithm based on compressive sensing.pdf:pdf},
-issn = {1380-7501},
 journal = {Multimedia Tools and Applications},
 keywords = {compressive sensing,k-svd,passive forensics,video forgery},
 mendeley-groups = {VideoForgery/AlSanjary15},
@@ -10,7 +9,36 @@ month = sep,
 number = {17},
 pages = {6641--6656},
 title = {{A video forgery detection algorithm based on compressive sensing}},
-url = {http://link.springer.com/10.1007/s11042-014-1915-4},
 volume = {74},
 year = {2015}
+}
+
+@article{Wang2015,
+abstract = {Perceptual image hash has been widely investigated in an attempt to solve the problems of image content authentication and content-based image retrieval. In this paper, we combine statistical analysis methods and visual perception theory to develop a real perceptual image hash method for content authentication. To achieve real perceptual robustness and perceptual sensitivity, the proposed method uses Watson's visual model to extract visually sensitive features that play an important role in the process of humans perceiving image content. We then generate robust perceptual hash code by combining image-block-based features and key-point-based features. The proposed method achieves a tradeoff between perceptual robustness to tolerate content-preserving manipulations and a wide range of geometric distortions and perceptual sensitivity to detect malicious tampering. Furthermore, it has the functionality to detect compromised image regions. Compared with state-of-the-art schemes, the proposed method obtains a better comprehensive performance in content-based image tampering detection and localization.},
+author = {Wang, Xiaofeng and Pang, Kemu and Zhou, Xiaorui and Zhou, Yang and Li, Lu and Xue, Jianru},
+doi = {10.1109/TIFS.2015.2407698},
+file = {:home/karita/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wang et al. - 2015 - A Visual Model-Based Perceptual Image Hash for Content Authentication.pdf:pdf},
+journal = {IEEE Transactions on Information Forensics and Security},
+keywords = {authorisation,content-based retrieval,cryptography,feature extraction,image coding,statistical analysis,visual perception},
+mendeley-groups = {VideoForgery/Journal},
+month = jul,
+number = {7},
+pages = {1336--1349},
+title = {{A Visual Model-Based Perceptual Image Hash for Content Authentication}},
+volume = {10},
+year = {2015}
+}
+
+@article{Chen2012,
+author = {Chen, Richao and Dong, Qiong and Ren, Heng and Fu, Jiaqi},
+doi = {10.3923/itj.2012.1456.1462},
+file = {:home/karita/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Chen et al. - 2012 - Video Forgery Detection Based on Non-Subsampled Contourlet Transform and Gradient Information.pdf:pdf},
+journal = {Information Technology Journal},
+mendeley-groups = {VideoForgery/AlSanjary15},
+month = oct,
+number = {10},
+pages = {1456--1462},
+title = {{Video Forgery Detection Based on Non-Subsampled Contourlet Transform and Gradient Information}},
+volume = {11},
+year = {2012}
 }
