--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{default}
 \usepackage{biblatex}
+\usepackage{amsmath}
 \addbibresource{ref.bib}
 \usetheme{Berlin}
 % \usecolortheme{seagull}
