--- a/ref.bib
+++ b/ref.bib
@@ -42,3 +42,17 @@ title = {{Video Forgery Detection Based on Non-Subsampled Contourlet Transform a
 volume = {11},
 year = {2012}
 }
+
+@article{Zhang2009,
+abstract = {In the digital multimedia era, it is increasingly important to ensure the integrity and authenticity of the vast volumes of video data. A novel approach is proposed for detecting video forgery based on ghost shadow artifact in this paper. Ghost shadow artifact is usually introduced when moving objects are removed by video inpainting. In our approach, ghost shadow artifact is accurately detected by inconsistencies of the moving foreground segmented from the video frames and the moving track obtained from the accumulative frame differences, thus video forgery is exposed. Experiments show that our approach achieves promising results in video forgery detection.},
+author = {Zhang, Jing and Su, Yuting and Zhang, Mingyu},
+doi = {10.1145/1631081.1631093},
+file = {:home/karita/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Zhang, Su, Zhang - 2009 - Exposing Digital Video Forgery by Ghost Shadow Artifact.pdf:pdf},
+isbn = {9781605587554},
+journal = {ACM Multimedia and Security Workshop},
+mendeley-groups = {VideoForgery/AlSanjary15},
+pages = {49--54},
+title = {{Exposing Digital Video Forgery by Ghost Shadow Artifact}},
+year = {2009}
+}
+
