--- a/text/sec4_experiment.tex
+++ b/text/sec4_experiment.tex
@@ -2,3 +2,7 @@
 
 \begin{frame}\frametitle{Experiments and Analysis}
 \end{frame}
+
+\begin{frame}\frametitle{Comparison with other algorithms}
+[Zhang 09]\footfullcite{Zhang2009} と [Song 11] と比較
+\end{frame}
