雑なコミット

--- a/main.tex
+++ b/main.tex
@@ -1,20 +1,12 @@
-\documentclass[dvipdfmx,11pt,notheorems]{beamer}
-\usepackage{bxdpx-beamer}
-\usepackage[utf8]{inputenc}
-\usepackage{default}
-\usepackage{biblatex}
-\usepackage{amsmath}
-\addbibresource{ref.bib}
-\usetheme{Berlin}
-% \usecolortheme{seagull}
-% \usefonttheme{structurebold}
-\setbeamerfont{footnote}{size=\tiny}
+\include{text/def}
 
-\title[L. Su et al (2015), A video forgery detection algorithm based on compressive sensing]{A video forgery detection algorithm based on compressive sensing}
-\author[Shigeki Karita]{苅田 成樹}
-\institute[M2]{M2}
-\date{2015.09.28}
-
+\title[A Video Forgery Detection Algorithm Based on Compressive Sensing]
+{A Video Forgery Detection Algorithm Based on Compressive Sensing}
+\author[L. Su et al (2015)]
+{L. Su et al (2015)}
+\institute[論文紹介 - M2 苅田成樹]
+{論文紹介 - M2 苅田成樹}
+\date{2015.09.28-29}
 
 \begin{document}
 
@@ -25,12 +17,6 @@
 \include{text/sec3_proposed}
 \include{text/sec4_experiment}
 \include{text/sec5_conclusion}
-
-\section*{references}
-\begin{frame}[allowframebreaks]{References}
-%     \scriptsize
-%     \bibliographystyle{plain}
-    \printbibliography
-\end{frame}
+\include{text/post}
 
 \end{document}
