--- a/ref.bib
+++ b/ref.bib
@@ -8,7 +8,7 @@ mendeley-groups = {VideoForgery/AlSanjary15},
 month = sep,
 number = {17},
 pages = {6641--6656},
-title = {{A video forgery detection algorithm based on compressive sensing}},
+title = {{A Video Forgery Detection Algorithm Based on Compressive Sensing}},
 volume = {74},
 year = {2015}
 }
@@ -43,16 +43,61 @@ volume = {11},
 year = {2012}
 }
 
+@incollection{Granados2012,
+author = {Granados, Miguel and Kim, Kwang In and Tompkin, James and Kautz, Jan and Theobalt, Christian},
+booktitle = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+doi = {10.1007/978-3-642-33718-5_49},
+file = {:home/karita/Documents/Mendeley Desktop/Granados et al. - 2012 - Background Inpainting for Videos with Dynamic Objects and a Free-Moving Camera - Lecture Notes in Computer Scie.pdf:pdf},
+keywords = {background estimation,free-camera,graph-cuts,image alignment,video completion,video inpainting,video processing},
+mendeley-groups = {VideoForgery},
+number = {1},
+pages = {682--695},
+title = {{Background Inpainting for Videos with Dynamic Objects and a Free-Moving Camera}},
+volume = {7572 LNCS},
+year = {2012}
+}
+
 @article{Zhang2009,
 abstract = {In the digital multimedia era, it is increasingly important to ensure the integrity and authenticity of the vast volumes of video data. A novel approach is proposed for detecting video forgery based on ghost shadow artifact in this paper. Ghost shadow artifact is usually introduced when moving objects are removed by video inpainting. In our approach, ghost shadow artifact is accurately detected by inconsistencies of the moving foreground segmented from the video frames and the moving track obtained from the accumulative frame differences, thus video forgery is exposed. Experiments show that our approach achieves promising results in video forgery detection.},
 author = {Zhang, Jing and Su, Yuting and Zhang, Mingyu},
 doi = {10.1145/1631081.1631093},
 file = {:home/karita/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Zhang, Su, Zhang - 2009 - Exposing Digital Video Forgery by Ghost Shadow Artifact.pdf:pdf},
-isbn = {9781605587554},
 journal = {ACM Multimedia and Security Workshop},
 mendeley-groups = {VideoForgery/AlSanjary15},
 pages = {49--54},
 title = {{Exposing Digital Video Forgery by Ghost Shadow Artifact}},
 year = {2009}
+}
+
+@article{Murata2012,
+abstract = {スパースコーディングは生物の一次視覚野の情報処理を数学的にモデル化したものであり,与えられた画像を少数の基底の線型結合で表現する手法である.観測信号のスパース表現は,工学的にも効率的な情報の保持・伝達,あるいはノイズに対して頑健な情報表現を実現する手法として注目を集めている.本稿では,スパースコーディングを始めとする種々の行列分解手法の数理的側面を,その確率モデルを介して統一的に論じる.また,スパースコーディングの代表的なアルゴリズムと幾つかの応用を紹介する.},
+author = {Hino, Hidenori and Murata, Noboru},
+file = {:home/karita/Downloads/IPSJ-CVIM12183020.pdf:pdf;:home/karita/Downloads/murata\_sbra2013.pdf:pdf},
+journal = {電子情報通信学会技術研究報告. IBISML, 情報論的学習理論と機械学習},
+month = aug,
+number = {198},
+pages = {133--142},
+publisher = {一般社団法人電子情報通信学会},
+title = {スパース表現の数理とその応用(コンピュータビジョンとパターン認識のための機械学習及び企業ニーズセッション)},
+volume = {112},
+year = {2012}
+}
+
+
+@article{Newson2014,
+abstract = {We propose an automatic video inpainting algorithm which relies on the optimisation of a global, patch-based functional. Our algorithm is able to deal with a variety of challenging situations which naturally arise in video inpainting, such as the correct reconstruction of dynamic textures, multiple moving objects and moving background. Furthermore, we achieve this in an order of magnitude less execution time with respect to the state-of-the-art. We are also able to achieve good quality results on high definition videos. Finally, we provide specific algorithmic details to make implementation of our algorithm as easy as possible. The resulting algorithm requires no segmentation or manual input other than the definition of the inpainting mask, and can deal with a wider variety of situations than is handled by previous work.},
+author = {Newson, Alasdair and Almansa, Andr\'{e}s and Fradet, Matthieu and Gousseau, Yann and P\'{e}rez, Patrick},
+doi = {10.1137/140954933},
+file = {:home/karita/Downloads/Video\_inpainting\_complex\_scenes.pdf:pdf},
+issn = {1936-4954},
+journal = {SIAM Journal on Imaging Sciences},
+keywords = {1,65c20,65k10,68u10,advanced image and video,ams subject classifications,and are also starting,and computer vision world,common,editing techniques are increasingly,in the image processing,introduction,media,moving background,patch-based inpainting,to be used in,video inpainting,video textures},
+mendeley-groups = {VideoForgery},
+month = jan,
+number = {4},
+pages = {1993--2019},
+title = {{Video Inpainting of Complex Scenes}},
+volume = {7},
+year = {2014}
 }
 
