--- a/text/sec5_conclusion.tex
+++ b/text/sec5_conclusion.tex
@@ -5,5 +5,10 @@
 \end{frame}
 
 
-\begin{frame}\frametitle{私のまとめ}
+\begin{frame}\frametitle{感想}
+\begin{itemize}
+  \item K-SVDの段階で連続フレームを入力すれば良さそう
+  \item K-Means で求まった重心との類似度に閾値をかけて ROC を書いてほしい
+  \item K-Means の代わりに教師有りな識別器を使ってみたい
+\end{itemize}
 \end{frame}
