--- a/text/sec2_preliminaries.tex
+++ b/text/sec2_preliminaries.tex
@@ -41,7 +41,14 @@ $\Theta$ は Ristricted Isometry Property
 \end{frame}
 
 
+\begin{frame}\frametitle{K-SVD の位置づけ}
+compressive sensing と行列因子分解法
+\end{frame}
+
+
 \begin{frame}\frametitle{K-SVD の定式化}
+\label{ksvd}
+
 訓練データセット $\{ x \}$ から疎な辞書 $D$ (= sensing matrix)を構築できるアルゴリズム．
 最適化問題としての定式化は以下
 \begin{eqnarray}
@@ -56,6 +63,11 @@ $\Theta$ は Ristricted Isometry Property
 
 \begin{frame}\frametitle{K-SVD + OMP 更新アルゴリズム}
 \end{frame}
+
+
+\begin{frame}{Singular Value Decomposition}
+\end{frame}
+
 
 
 \begin{frame}\frametitle{Morphological image processing}
