雑なコミット

--- a/text/def.tex
+++ b/text/def.tex
@@ -8,6 +8,8 @@ style=ieee,
 citestyle=numeric
 ]{biblatex}
 \usepackage{amsmath}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \addbibresource{text/ref.bib}
 \usetheme{Berlin}
 \usefonttheme{structurebold}
