--- a/text/sec1_intro.tex
+++ b/text/sec1_intro.tex
@@ -1,11 +1,11 @@
-\section{Introduction}
-\begin{frame}\frametitle{Introduction}
-要点
-\begin{itemize}
-    \item Photoshop ~
-    \item VF は 2つのカテゴリ
-    \item HOG とか ~
-    \item 低解像度だと ~
-    \item K-SVD は ~
-\end{itemize}
-\end{frame}
+% \section{Introduction}
+% \begin{frame}\frametitle{Introduction}
+% 要点
+% \begin{itemize}
+%     \item Photoshop ~
+%     \item VF は 2つのカテゴリ
+%     \item HOG とか ~
+%     \item 低解像度だと ~
+%     \item K-SVD は ~
+% \end{itemize}
+% \end{frame}
