--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \include{text/def}
+\include{text/symbols}
 
 \title[A Video Forgery Detection Algorithm Based on Compressive Sensing]
 {A Video Forgery Detection Algorithm Based on Compressive Sensing}
