--- a/text/sec3_proposed.tex
+++ b/text/sec3_proposed.tex
@@ -46,6 +46,7 @@ $h_a * h_a$ サイズのブロック列化
             \includegraphics[height=2cm]{figure/dct.png}
         \end{column}
         \begin{column}{0.8\textwidth} % 左:60%
+        DCT (下記) の高周波成分はほぼ 0 なので疎表現
         \begin{eqnarray}
             D_{1,j} & = & 1 / \sqrt{N} \\
             D_{i,j} & = & \sqrt{2/N} \cos{\frac{\pi (2j - 1) (i + 1)}{2 N}}
@@ -64,7 +65,7 @@ $h_a * h_a$ サイズのブロック列化
 \end{eqnarray}
 ここで $\Theta : M \times N$ は measurement matrix と呼ばれる．
 \begin{block}{measurement matrix}
-$\Theta$ は入力がスパースなら random Gaussian matrix を用いると比較的良い性能が知られる (RIP を調べなくても良い)\cite{Candes2006}
+$\Theta$ は入力が疎なら random Gaussian matrix を用いると比較的良い性能が知られる (RIP を調べなくても良い)\cite{Candes2006}
 \end{block}
 筆者らは$\mathrm{Norm}(0, 1/M)$ を用いた．
 また $M$ は不等式
