--- a/text/sec5_conclusion.tex
+++ b/text/sec5_conclusion.tex
@@ -11,9 +11,9 @@
 
 \begin{block}{感想}
 \begin{itemize}
-  \item K-SVDの段階で連続フレームを入力すれば良さそう
-  \item K-Means で求まった重心との類似度に閾値をかけて ROC を書いてほしい
+  \item K-Means の重心との距離で ROC を書いてほしい
   \item K-Means の代わりに教師有りな識別器を使ってみたい
+  \item sparse coding とか dictionaly learning を学べた \footnote{ICCV14 の tutorial\cite{Mairal2014} が新しくて詳しかった}
   \item 論文紹介までに実装が間に合わなかった
 \end{itemize}
 \end{block}
