--- a/text/sec5_conclusion.tex
+++ b/text/sec5_conclusion.tex
@@ -4,7 +4,7 @@
 \begin{frame}\frametitle{Conclusions}
 \begin{block}{結論}
 \begin{itemize}
-    \item 実験によってよりロバストな改ざん検出を確認できた
+    \item 実験によって従来よりロバストな改ざん検出を確認できた
     \item ただし，前景領域が小さく速いときに実験結果が良くない
 \end{itemize} 
 \end{block}
@@ -13,7 +13,7 @@
 \begin{itemize}
   \item K-Means の重心との距離で ROC を書いてほしい
   \item K-Means の代わりに教師有りな識別器を使ってみたい
-  \item sparse coding とか dictionaly learning を学べた \footnote{ICCV14 の tutorial\cite{Mairal2014} が新しくて詳しかった}
+  \item sparse coding とか dictionaly learning を学べた \footnote{ICCV14 の tutorial\cite{Mairal2014} が詳しい}
   \item 論文紹介までに実装が間に合わなかった
 \end{itemize}
 \end{block}
